--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
         android:id="@+id/btnDungLai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/timePicker"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_below="@+id/timePicker"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="Dừng lại"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="336dp" />
@@ -29,11 +29,11 @@
         android:id="@+id/btnHenGio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/timePicker"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/timePicker"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:text="Hẹn giờ"
         tools:layout_editor_absoluteX="280dp"
         tools:layout_editor_absoluteY="336dp" />
@@ -42,9 +42,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/timePicker"
+        android:layout_below="@+id/btnDungLai"
         android:layout_centerHorizontal="true"
-        android:text="TextView"
+        android:text="Thời gian hẹn"
         tools:layout_editor_absoluteX="163dp"
         tools:layout_editor_absoluteY="384dp" />
 </RelativeLayout>
